[project]
name = "float-mcp"
version = "0.1.0"
description = "MCP server for Float.com time entry management"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "holidays>=0.40",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
float-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
